# ore-oh

./: Procfile  model.py  pyproject.toml  requirements.txt  schema.graphql  start.sh  startProd.sh  statistics.py
db/: create_db.sql  schema.sql
tests/: test_statistics.py
